--- a/CommerceBankWebApp/Views/Home/Index.cshtml
+++ b/CommerceBankWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center left-block">
+    <h1 class="display-4">What's your next challenge?</h1>
+    <p>
+        You’ve got big plans. Not sure where to start? When it comes to money, we’re here to help you connect the dots, no matter what your next step is.
+    </p>
+</div>
+<div class="text-center middle-block">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div>
+<div class="text-center right-block">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
