--- a/CommerceBankWebApp/wwwroot/css/site.css
+++ b/CommerceBankWebApp/wwwroot/css/site.css
@@ -11,6 +11,10 @@ a.navbar-brand {
 a {
   color: #0366d6;
 }
+p {
+    margin-top: 50px;
+    line-height: 1.5rem;
+}
 
 .left-block {
     float: left;
@@ -105,4 +109,53 @@ body {
     padding: 15px;
     margin: 25px;
     color: black;
+}
+.btn, .btn1small {
+    font-size: 16px;
+    padding: 12px 12px;
+}
+
+.btn, .btn1small {
+    border-radius: 0;
+    font-size: 14px;
+    transition: all 0.4s ease;
+}
+
+.btn-primary, .btn1small {
+    color: #006747 !important;
+    background-color: white;
+    border: 2px solid white;
+    border-color: transparent;
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 8px 12px;
+    font-size: 16px;
+    line-height: 1.5;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0 );
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
