--- a/CommerceBankWebApp/Views/Home/Index.cshtml
+++ b/CommerceBankWebApp/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p>
         You’ve got big plans. Not sure where to start? When it comes to money, we’re here to help you connect the dots, no matter what your next step is.
     </p>
-    <a href="/personal/life-stages" class="btn btn-primary" style="margin-top: 35px">Learn more <span class="visually-hidden">about What's your next challenge.</span></a>
+    <a href="#" class="btn btn-primary" style="margin-top: 35px">Learn more <span class="visually-hidden">about What's your next challenge.</span></a>
 </div>
 <div class="text-center middle-block">
     <h1 class="display-4">Welcome</h1>
