--- a/CommerceBankWebApp/Views/Home/Index.cshtml
+++ b/CommerceBankWebApp/Views/Home/Index.cshtml
@@ -3,17 +3,19 @@
 }
 
 <div class="text-center left-block">
-    <h1 class="display-4" style="font-size: 2rem; margin-top: 60px">What's your next challenge?</h1>
+    <h1 class="display-4" style="font-size: 2rem; margin-top: 50px; color: white; margin-bottom: 30px">What's your next challenge?</h1>
+    <hr>
     <p>
         You’ve got big plans. Not sure where to start? When it comes to money, we’re here to help you connect the dots, no matter what your next step is.
     </p>
-    <a href="#" class="btn btn-primary" style="margin-top: 35px">Learn more <span class="visually-hidden">about What's your next challenge.</span></a>
+    <a href="#" class="btn btn-primary" style="margin-top: 45px">Learn more <span class="visually-hidden">about What's your next challenge.</span></a>
 </div>
-<div class="text-center middle-block">
+<img height="580" width ="750" src="https://www.aboutmanchester.co.uk/wp-content/uploads/2019/11/1-23.jpg">
+<!--<div class="text-center middle-block">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <div class="text-center right-block">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+</div>-->
