small changes. added code to close excel file connection when done. Added (temporary) link to click on PopulateDatabase page. Added code so database schema generates automtically if the database is empty.

--- a/CommerceBankWebApp/Pages/PopulateDatabase.cshtml
+++ b/CommerceBankWebApp/Pages/PopulateDatabase.cshtml
@@ -19,9 +19,9 @@
         <tr>
             <td>@t.AccountType</td>
             <td>@t.AccountNumber</td>
-            <td>@t.Balance</td>
+            <td>$@t.Balance.ToString("0.00")</td>
             <td>@t.IsCredit</td>
-            <td>@t.Amount</td>
+            <td>$@t.Amount.ToString("0.00")</td>
             <td>@t.Description</td>
         </tr>
             }
