switched the spreadsheet code to spreadsheet light

--- a/CommerceBankWebApp/Pages/PopulateDatabase.cshtml
+++ b/CommerceBankWebApp/Pages/PopulateDatabase.cshtml
@@ -9,6 +9,7 @@
     <tr>
         <td>Account Type</td>
         <td>Account #</td>
+        <td>Date</td>
         <td>Balance</td>
         <td>Is Credit</td>
         <td>Amount</td>
@@ -19,6 +20,7 @@
         <tr>
             <td>@t.AccountType</td>
             <td>@t.AccountNumber</td>
+            <td>@t.ProcessingDate</td>
             <td>$@t.Balance.ToString("0.00")</td>
             <td>@t.IsCredit</td>
             <td>$@t.Amount.ToString("0.00")</td>
